add a send message demo.

--- a/gae/tpl/sendim/invite.html
+++ b/gae/tpl/sendim/invite.html
@@ -6,6 +6,8 @@
   </head>
 
   <body>
+    <div class="msg">{{msg}}</div>
+
     <form method="post">
       <input type="email" name="email" autofocus required>  
       <button type="submit">邀请</button>
