--- a/gae/sendimdemo.html
+++ b/gae/sendimdemo.html
@@ -15,7 +15,7 @@
 
       <p>
         <label for="jidInput">jid/email</label><br/>
-        <input id="jidInput" type="email" name="jid" value="" >
+        <input id="jidInput" type="email" name="jid" />
       </p>
 
       <p>
