--- a/gae/tpl/sendim/invite.html
+++ b/gae/tpl/sendim/invite.html
@@ -9,7 +9,7 @@
     <div class="msg">{{msg}}</div>
 
     <form method="post">
-      <input type="email" name="email" autofocus required>  
+      <input type="email" name="email" autofocus required />  
       <button type="submit">邀请</button>
     </form>
   </body>
